# libgpg-stream

./: .SRCINFO  .gitignore  .releaserc.json  Makefile.am  PKGBUILD  README.md  autogen.sh  configure.ac  libgpg-stream.pc.in
.ci/: trigger-aur-update.sh
.github/workflows/: semantic-release.yml
doc/: Makefile.am  libgpg-stream.3
examples/: Makefile.am  example-receiver.c  example-sender.c
release/: .gitkeep
src/: Makefile.am  libgpg-stream.c  libgpg-stream.h
